--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["pvermees <p.vermeesch@ucl.ac.uk>"]
 version = "0.1.0"
 
 [deps]
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
@@ -14,6 +15,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
+ForwardDiff = "0.10.38"
 Infiltrator = "1.8"
 LinearAlgebra = "1.11.0"
 Optim = "1.9.4"
