--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["pvermees <p.vermeesch@ucl.ac.uk>"]
 version = "0.1.2"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Gtk4 = "9db2cae5-386f-4011-9d63-a5602296539b"
@@ -17,5 +18,6 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
+CSV = "0.10.15"
 DataFrames = "1.7.0"
 Gtk4 = "0.5.0"
